--- a/pricingPage.html
+++ b/pricingPage.html
@@ -15,19 +15,19 @@
     <div class="pricing-card-wrapper">
 <!-- 1 -->
         <div class="pricing-card">
-            <div>
+            <div class="card-one">
                 <h2>Free</h2>
                 <h4>For teams getting started </h4>
                 <p>Centralized task management</p>
             </div>
 
-            <div>
-                <h2>$0  <span>user/month</span> </h2>
+            <div class="card-two">
+                <h2>$0   </h2><span>user/month</span> <br>
                 <button>Get started </button>
                 <p>No credit card required</p>
             </div>
 
-            <div>
+            <div class="card-three">
                 <p>Key features:</p>
                 <ul>
                     <li>Web, desktop and mobile apps</li>
@@ -39,7 +39,7 @@
                 <h5> <img src="data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8.7998%207V2M8.7998%202L1.7998%209M8.7998%202H3.7998%22%20stroke%3D%22%23007860%22%20stroke-width%3D%221.5%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E" alt=""> Compare all features  </h5>
             </div>
 
-            <div>
+            <div class="card-four">
                 <button>Get Started </button>
                 <p>No credit card required</p>
             </div>
@@ -47,19 +47,19 @@
         </div>
 <!-- 2 -->
         <div class="pricing-card">
-            <div>
+            <div class="card-one">
                 <h2>Team</h2>
                 <h4>For growing teams </h4>
                 <p>Effective team management</p>
             </div>
 
-            <div>
+            <div class="card-two">
                 <h2>$9.80</h2> <span>user/month</span>
                 <button>Get started </button>
                 <p>No credit card required</p>
             </div>
 
-            <div>
+            <div class="card-three">
                 <p>Everything in Free plan plus:</p>
                 <ul>
                     <li>Unlimited projects</li>
@@ -75,7 +75,7 @@
                 <h5> <img src="data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8.7998%207V2M8.7998%202L1.7998%209M8.7998%202H3.7998%22%20stroke%3D%22%23007860%22%20stroke-width%3D%221.5%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E" alt=""> Compare all features  </h5>
             </div>
 
-            <div>
+            <div class="card-four">
                 <button>Get Started </button>
                 <p>No credit card required</p>
             </div>
@@ -83,19 +83,19 @@
         </div>
 <!-- 3 -->
         <div class="pricing-card">
-    <div>
+    <div class="card-one">
         <h2>Business</h2>
         <h4>For all teams across an organization </h4>
         <p>Customized platform for any team or use case </p>
     </div>
 
-    <div>
+    <div class="card-two">
         <h2>$24.80</h2> <span>user/month</span>
         <button>Get started </button>
         <p>No credit card required</p>
     </div>
 
-    <div>
+    <div class="card-three">
         <p>Everything in Team plan plus:</p>
         <ul>
             <li>Folder structure & nested projects</li>
@@ -113,7 +113,7 @@
         <h5> <img src="data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8.7998%207V2M8.7998%202L1.7998%209M8.7998%202H3.7998%22%20stroke%3D%22%23007860%22%20stroke-width%3D%221.5%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E" alt=""> Compare all features  </h5>
     </div>
 
-    <div>
+    <div class="card-four">
         <button>Get Started </button>
         <p>No credit card required</p>
     </div>
@@ -228,7 +228,7 @@
         </div>
 
         <div class="add-on-cardwrap">
-
+<!-- 1 -->
             <div class="add-on-card">
                 <div>
                     <img src="https://web-static.wrike.com/tp/storage/uploads/0cd44218-4f0b-4617-a4f9-48180e5f6e61/brandevo-icon-intergrations.svg" alt="">
@@ -242,45 +242,44 @@
                     <span>learn more <img src="data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10%2013L15%208L10%203%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cline%20x1%3D%2214%22%20y1%3D%228%22%20x2%3D%22-8.74228e-08%22%20y2%3D%228%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%2F%3E%3C%2Fsvg%3E" alt=""></span>
                 </div>
             </div>
-
+<!-- 2 -->
             <div class="add-on-card">
                 <div>
                     <img src="https://web-static.wrike.com/tp/storage/uploads/0cd44218-4f0b-4617-a4f9-48180e5f6e61/brandevo-icon-change.svg" alt="">
                 </div>
 
                 <div>
-                    <h5>BoxTech Integrate</h5>
+                    <h5>BoxTech Two-Way Sync</h5>
                     <p>
-                        Create custom integrations and automations with 400+ cloud and on-premises applications.
+                        Enable technical teams with a two-way sync with their favorite tools including Jira and Github
                     </p>
                     <span>learn more <img src="data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10%2013L15%208L10%203%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cline%20x1%3D%2214%22%20y1%3D%228%22%20x2%3D%22-8.74228e-08%22%20y2%3D%228%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%2F%3E%3C%2Fsvg%3E" alt=""></span>
                 </div>
             </div>
-
+<!-- 3 -->
             <div class="add-on-card">
                 <div>
                     <img src="https://web-static.wrike.com/tp/storage/uploads/23c45534-e230-42c8-99ba-2f53fc439762/brandevo-icon-lock.svg" alt="">
                 </div>
 
                 <div>
-                    <h5>BoxTech Integrate</h5>
+                    <h5>BoxTech Lock</h5>
                     <p>
-                        Create custom integrations and automations with 400+ cloud and on-premises applications.
+                        Own and manage keys to your encrypted data to get data access control and audit capabilities. 
                     </p>
                     <span>learn more <img src="data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10%2013L15%208L10%203%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cline%20x1%3D%2214%22%20y1%3D%228%22%20x2%3D%22-8.74228e-08%22%20y2%3D%228%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%2F%3E%3C%2Fsvg%3E" alt=""></span>
                 </div>
             </div>
-
+<!-- 4 -->
             <div class="add-on-card">
                 <div>
                     <img src="https://web-static.wrike.com/tp/storage/uploads/0cd44218-4f0b-4617-a4f9-48180e5f6e61/brandevo-icon-items.svg" alt="">
-                    <!-- <img src="Users/LENOVO/Downloads/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt=""> -->
                 </div>
 
                 <div>
-                    <h5>BoxTech Integrate</h5>
+                    <h5>BoxTech Marketing Insights</h5>
                     <p>
-                        Create custom integrations and automations with 400+ cloud and on-premises applications.
+                        Get cross-channel camppaign performance insights across 50+ tools like Marketo, ad platforms, social media and more.
                     </p>
                     <span>learn more <img src="data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M10%2013L15%208L10%203%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%20stroke-linejoin%3D%22round%22%2F%3E%3Cline%20x1%3D%2214%22%20y1%3D%228%22%20x2%3D%22-8.74228e-08%22%20y2%3D%228%22%20stroke%3D%22%230a615a%22%20stroke-width%3D%222%22%2F%3E%3C%2Fsvg%3E" alt=""></span>
                 </div>
@@ -311,7 +310,7 @@
                 <h2>Try our powerful work management software today for free</h2>
                 <p>Sign up for a free two-week trial of Wrike today — no credit card required.</p>
             </div>
-            <div>
+            <div class="input_button">
                 <input type="email" placeholder="Enter your business email">
                 <button>Get Started</button>
             </div>
