day_3 issues and tasks completed

--- a/webinar.html
+++ b/webinar.html
@@ -38,10 +38,10 @@
     <div id="search">
         <i class="fa fa-search" style="font-size:24px"></i>
     </div>
-    <div id="main">
+    <div onclick="myfunc2()" id="main">
         
     </div>
-    <div id="main1">
+    <div   onclick="myfunc2()" id="main1">
         
     </div>
     <div id="more">
