some changes in day-3

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             <h1>find clarity,</h1>
             <h1>exceed goals</h1>
             <p>Anything is possible with the most powerful work management software at your fingertips.</p>
-            <input type="email" placeholder="Enter your business email">
-            <button>Get Started</button>
+            <form>
+                <input type="email" required placeholder="Enter your business email">
+                 <button>Get Started</button>
+            </form>
             <a href="#"><h4 class="fa fa-play-circle-o" style="color: green; cursor: pointer;" > Explore our new platform</h4>  </a>  
          </div>
 
@@ -130,8 +132,10 @@
             <p>Sign up for a free two-week trial of Wrike today — no credit card required. </p>
         </div>
         <div>
-            <input placeholder="Enter your business email" type="email">
-            <button>Get started</button>
+            <form>
+                <input required placeholder="Enter your business email" type="email">
+                <button>Get started</button>
+            </form>
         </div>
     </div>
 
