--- a/html/workspace-page-2.html
+++ b/html/workspace-page-2.html
@@ -82,7 +82,7 @@
                     </div>
 
 
-                    <button class="next_button">Next</button>
+                    <button class="next_button2" onclick="secondPage()">Next</button>
 
                 </div>
             </div>
@@ -97,6 +97,7 @@
 
 </body>
 
-<script src="/script/workspace.js"></script>
+<script src="/script/workspace.js">
+</script>
 
 </html>
