--- a/html/workspace-page-3.html
+++ b/html/workspace-page-3.html
@@ -27,7 +27,7 @@
                     <p>Don’t worry, you can change everything later.</p>
                     <div style="margin-top: 20px">
                         <label style="font-family: 'Poppins', sans-serif;" for="">Space name</label>
-                        <input type="text" id="team" placeholder="e.g. First Space">
+                        <input type="text" id="space" placeholder="e.g. First Space">
                     </div>
                 </div>
 
@@ -78,7 +78,7 @@
                     </div>
 
 
-                    <button class="next_button">Next</button>
+                    <button class="next_button3" onclick="pagethree()">Next</button>
 
                 </div>
             </div>
