--- a/html/workspace-page-4.html
+++ b/html/workspace-page-4.html
@@ -25,7 +25,7 @@
                     <h3>What’s your team working on?</h3>
                     <div style="margin-top: 20px">
                         <label style="font-family: 'Poppins', sans-serif;" for="">Project name</label>
-                        <input type="text" id="team" placeholder="e.g. First Space">
+                        <input type="text" id="project" placeholder="e.g. First Project">
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
                     </div>
 
 
-                    <button class="next_button">Next</button>
+                    <button class="next_button4" onclick="pageFour()">Next</button>
 
                 </div>
             </div>
