--- a/html/workspace-page-5.html
+++ b/html/workspace-page-5.html
@@ -24,9 +24,9 @@
                 <div>
                     <h3>What needs to be done?</h3>
                     <div style="margin-top: 20px">
-                        <input type="text" id="team" placeholder="First Task">
-                        <input type="text" id="team" placeholder="Second Task">
-                        <input type="text" id="team" placeholder="Third Task">
+                        <input type="text" id="First_Task" placeholder="First Task">
+                        <input type="text" id="Second_Task" placeholder="Second Task">
+                        <input type="text" id="Third_Task" placeholder="Third Task">
                     </div>
                 </div>
 
@@ -77,7 +77,7 @@
                     </div>
 
 
-                    <button class="next_button">Next</button>
+                    <button class="next_button5" onclick="pageFive()">Next</button>
 
                 </div>
             </div>
