--- a/html/workspace-page-6.html
+++ b/html/workspace-page-6.html
@@ -24,9 +24,9 @@
                 <div>
                     <h3>How would you group those tasks?</h3>
                     <div style="margin-top: 20px">
-                        <input type="text" id="team" placeholder="This Week">
-                        <input type="text" id="team" placeholder="Next month">
-                        <input type="text" id="team" placeholder="Next year">
+                        <input type="text" id="This_week" placeholder="This Week">
+                        <input type="text" id="Next_month" placeholder="Next month">
+                        <input type="text" id="Next_year" placeholder="Next year">
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
                     </div>
 
 
-                    <button class="next_button">Next</button>
+                    <button class="next_button6" onclick="pageSix()">Next</button>
 
                 </div>
             </div>
