Day-4 issues and tasks are completed

--- a/webinar.html
+++ b/webinar.html
@@ -15,7 +15,7 @@
         <div id="header">
             <h1>BoxTech Webinars</h1>
         </div>
-        <div id="top">
+        <div onclick="myfunc8()" id="top">
             
             <div>
                 <img src="https://web-static.wrike.com/tp/storage/uploads/3630c34a-0cf6-498d-92f7-4c629103fde9/maximize-your-marketing-impact-in-2023-live-2x.png" alt="">
