--- a/video.html
+++ b/video.html
@@ -5,148 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>video</title>
-    <style>
-        *{
-            margin:0px
-        }
-        #cont{
-            display:flex;
-            width:80%;
-            margin: auto;
-            justify-content: space-between;
-            margin-top: 40px;
-        }
-        #webi{
-            width:20%;
-            margin-top: 150px;
-            margin-left:145px;
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 28px;
-            color:  rgb(10, 97, 90);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        #cont2{
-            border:0px;
-            border-radius: 8px;
-            
-        }
-        #cont2>iframe{
-            width:250%;
-            height:425px;
-        }
-        #about{
-            margin-top: 40px;
-            margin-left:145px
-        }
-        .vid{
-            margin-right: 30px;
-            width:30%;
-        }
-        .vid>h3{
-            /* width:100%; */
-            font-size: 24px;
-            font-weight: 600;
-            line-height: 32px;
-            color:  rgb(24, 31, 56);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        .vid>p{
-            font-size: 18px;
-            padding-top: 2px;
-            font-weight: 400;
-            line-height: 32px;
-            color:  rgb(43, 56, 87);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        #about>h3{
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 28px;
-            margin-bottom: 50px;
-            color:  rgb(10, 97, 90);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        #about>p{
-            font-size: 18px;
-            padding-top: 2px;
-            font-weight: 400;
-            line-height: 32px;
-            margin-bottom: 50px;
-            color:  rgb(43, 56, 87);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        #webi>p:hover{
-            cursor: pointer;
-            color: rgb(0, 120, 96)
-        }
-        #about>h3:hover{
-            cursor: pointer;
-            color: rgb(0, 120, 96)
-        }
-        #bottom{
-            background-color: rgb(235, 245, 243);
-            width:100%;
-            height:500px;
-            margin: auto;
-        }
-        #bot1{
-            width:500px;
-            padding-left: 150px;
-            /* border:1px solid red;  */
-            margin: auto;
-            padding-top: 60px;
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-            font-size: 44px;
-            font-weight: 700;
-            Line-height: 60px;
-             color: rgb(29, 31, 36);
-        }
-        @media all and (min-width: 100px) and (max-width: 1000px) {
-            #cont{
-                display: grid;
-                grid-template-columns: repeat(1,1fr);
-            }
-            .vid{
-                width:100%
-            }
-        }
-
-        #bot2{
-            width:85%;
-            margin: auto;
-            display: flex;
-            justify-content: space-evenly;
-
-        }
-        #bot2>div{
-            /* border: 1px solid red; */
-            height:200px;
-            margin-top: 50px;
-            width:26%;
-            padding: 20px;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-            border-radius: 10px;
-            background-color: white;
-        }
-        #bot2>div>p{
-            font-size: 12px;
-            font-weight: 600;
-            line-height: 32px;
-            margin-bottom: 20px;
-            color:  rgb(43, 56, 87);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-        #bot2>div>h3{
-            font-size: 20px;
-            font-weight: 500;
-            line-height: 28px;
-            margin-bottom: 20px;
-            color:   rgb(0, 120, 96);
-            font-family: TT_Norms_Pro, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Segoe UI", Roboto, Oxygen-Sans, "Fira Sans", "Droid Sans", Ubuntu, Cantarell, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        }
-
-    </style>
+    <link rel="stylesheet" href="video.css">
 </head>
 <body>
     <div id="webi">
