--- a/meenakshi/pricingPage.html
+++ b/meenakshi/pricingPage.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plans and Pricing | Wrike</title>
+
+    <title>Plans and Pricing | BoxTech</title>
+    <link rel="shortcut icon" href="./pricingImages/BoxTech logo.png" type="image/x-icon" >
     <link rel="stylesheet" href="./pricingPage.css">
+    <script src="https://kit.fontawesome.com/24c494a6b6.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <div class="intro">
         <p> <b> Plans for Every Team </b></p>
@@ -35,8 +39,7 @@
             <div class="card-three">
                 <p>Key features:</p>
                 <ul>
-                    <li> 
-                        <span>&#10003;</span> Web, desktop and mobile apps</li>
+                    <li>Web, desktop and mobile apps</li>
                     <li>Project & task management</li>
                     <li>Board view</li>
                     <li>table view </li>
@@ -144,7 +147,8 @@
 
         </div>
 <!-- 4 -->
-        <div style="background-color: #f8f9fb;" class="pricing-card diff-card">
+        <div 
+        style="background-color: #f8f9fb; " class="pricing-card diff-card">
             <br><br> 
             <div style="margin-top: 10px;" class="diff-card1">
                 <h2>Enterprise </h2>
@@ -179,7 +183,7 @@
 
         </div>
 <!-- 5 -->
-        <div style="background-color: #f8f9fb;" class="pricing-card diff-card">
+        <div style="background-color: #f8f9fb; border-right: none; " class="pricing-card diff-card">
             <div style="display: flex;">
                 
                 <img src="data:image/svg+xml,%3Csvg%20width%3D%2216%22%20height%3D%2216%22%20viewBox%3D%220%200%2016%2016%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M6.5%209C4.5%209%205%206.5%205.5%204C3.5%206%202%207.7%202%2010.5C2%2013.3%205%2015%208%2015C11%2015%2014%2013.5%2014%2010C14%206.5%209%205%208%201C6%204.5%209.5%209%206.5%209ZM9.5%2013C12%2013%2012.5%2010.5%2011%208.5C11%2010.5%2010%2011%209%2011.5C8%2012%208.5%2013%209.5%2013Z%22%20fill%3D%22%23FFA200%22%2F%3E%3C%2Fsvg%3E" alt="">
@@ -223,13 +227,13 @@
 
 
     <div class="pricing-banner"> 
-        <img class="banner-img" src="https://web-static.wrike.com/tp/static/pricing-banner-image-left.46a26b58f1f2ab247d5f.png" alt="left">
+        <img class="banner-img" src="https://web-static.wrike.com/tp/static/pricing-banner-image-left.f04894a9644fa4b3.png" alt="left">
         <div>
             <h4>Compare features across our plans</h4>
-            <p>Take a closer look  <img src="data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8.7998%207V2M8.7998%202L1.7998%209M8.7998%202H3.7998%22%20stroke%3D%22%23007860%22%20stroke-width%3D%221.5%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E" alt=""> 
+            <p style="cursor: pointer;">Take a closer look  <img src="data:image/svg+xml,%3Csvg%20width%3D%2211%22%20height%3D%2210%22%20viewBox%3D%220%200%2011%2010%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20d%3D%22M8.7998%207V2M8.7998%202L1.7998%209M8.7998%202H3.7998%22%20stroke%3D%22%23007860%22%20stroke-width%3D%221.5%22%20stroke-linejoin%3D%22round%22%2F%3E%3C%2Fsvg%3E" alt=""> 
             </p>
         </div>
-        <img class="banner-img" src="https://web-static.wrike.com/tp/static/pricing-banner-image-right.186e6610f0ed0c97dc1d.png" alt="right">
+        <img  style="border-top-right-radius: 12px;" class="banner-img" src="https://web-static.wrike.com/tp/static/pricing-banner-image-right.e4b7055d99681b63.png" alt="right">
     </div>
 
     <div class="pricing-note">
@@ -366,11 +370,25 @@
         <h2>FAQ</h2>
 
         <div class="faq-card">
-        <div>1. What are the different types of licenses?</div>
-        <div>2. What happens when my trial has expired?</div>
-        <div>3. How do I purchase a subscription?</div>
-        <div>4. Can I pay in my local currency and what kind of taxes apply?</div>
-    </div>
+            <div  id="faq1"> 
+                <h4> 1. What are the different types of licenses?<i style="margin-left: 50%;" class="fa-solid fa-sort-up"></i>  </h4>             
+            </div> 
+            <div id="faq2"> 
+                <h4>2. What happens when my trial has expired? 
+                    <i style="margin-left: 48%;" class="fa-solid fa-sort-up"></i> 
+                </h4>
+            </div>
+            <div id="faq3">
+                <h4>3. How do I purchase a subscription? 
+                    <i style="margin-left: 55%;" class="fa-solid fa-sort-up"></i>
+                </h4>
+            </div>
+            <div id="faq4"> 
+                <h4>4. Can I pay in my local currency and what kind of taxes apply?
+                    <i style="margin-left: 30%;" class="fa-solid fa-sort-up"></i>
+                </h4>
+            </div>
+        </div>
     </div>
 
 </body>
