--- a/html/workspace-page-1.html
+++ b/html/workspace-page-1.html
@@ -28,12 +28,20 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/reg_form_image--m.png" alt=""></div>
+                <!-- <div><img src="/images/reg_form_image--m.png" alt=""></div> -->
                 <div id="register">
 
                     <form action="#" autocomplete="on">
                         <div>
                             <input type="text" name="" id="name" placeholder="Your full name">
+                        </div>
+
+                        <div>
+                            <input type="text" name="" id="Username" placeholder="Create Username">
+                        </div>
+
+                        <div>
+                            <input type="text" name="" id="Password" placeholder="Create Password">
                         </div>
 
                         <div id="number_div">
