--- a/navbar.html
+++ b/navbar.html
@@ -34,6 +34,9 @@ body {
   padding: 14px 16px;
 }
 
+html{
+scroll-behavior: smooth;
+}
 
 .navbar_right button:hover{
   background-color: #05b858 ;
@@ -85,6 +88,7 @@ margin-bottom: -65px;
 
 .navbar a:hover, .dropdown:hover .dropbtn {
   background-color: #ebf5f3;
+  /* transition: 2s; */
 }
 
 .dropdown-content {
@@ -105,6 +109,7 @@ margin-bottom: -65px;
 
 .dropdown:hover .dropdown-content {
   display: block;
+  /* transition: 2s; */
 }
 
 /* Create three equal columns that floats next to each other */
