--- a/meenakshi/pricingPage.html
+++ b/meenakshi/pricingPage.html
@@ -15,7 +15,7 @@
     <div class="intro">
         <p> <b> Plans for Every Team </b></p>
     </div>
-
+    <!-- -------------------------------- -->
     <div class="pricing-card-wrapper">
 <!-- 1 -->
         <div class="pricing-card">
@@ -32,7 +32,7 @@
                     <p>user/month</p>
                 </div>
                  
-                <button id="btn">Get started </button>
+                <button id="getbtn">Get started </button>
                 <p>No credit card required</p>
             </div>
 
@@ -224,6 +224,7 @@
         </div>
 
     </div>
+    <!-- -------------------------------- -->
 
 
     <div class="pricing-banner"> 
@@ -236,12 +237,16 @@
         <img  style="border-top-right-radius: 12px;" class="banner-img" src="https://web-static.wrike.com/tp/static/pricing-banner-image-right.e4b7055d99681b63.png" alt="right">
     </div>
 
+    <!-- -------------------------------- -->
+
     <div class="pricing-note">
         <p>The pricing outlined herein is valid only as to new purchases occurring on or after October 25, 2022, and is not offered and does not apply to any prior purchases. Wrike reserves the right to adjust its packaging and pricing at any time.
         <br>
         Amount shown is price per month and billed on an annual per user basis.
         </p>
     </div>
+
+    <!-- -------------------------------- -->
 
     <div class="logo-roll">
         <img src="https://web-static.wrike.com/tp/storage/uploads/3b19367a-9020-408b-8af7-5e89773b8d4b/1440-logoroll-logo-google.svg" alt="">
@@ -254,6 +259,8 @@
     </div>
     <p class="logo-text">TRUSTED BY 20,000+ ORGANIZATIONS WORLDWIDE</p>
 
+
+    <!-- -------------------------------- -->
     <div class="add-on">
 
         <div class="add-on-text">
@@ -322,6 +329,7 @@
         </div>
         
     </div>
+    <!-- -------------------------------- -->
 
     <div class="story-slider-wrap">
         <div class="slider-heading">
@@ -333,6 +341,7 @@
         </div>
     </div>
 
+    <!-- -------------------------------- -->
 
     <div class="signup-section">
         <div>
@@ -346,7 +355,7 @@
             </div>
             <div class="input_button">
                 <form action="">
-                <input type="email" placeholder="Enter your business email">
+                <input type="email" required="required" placeholder="Enter your business email">
                 <button>Get Started</button>
                 </form>
             </div>
@@ -357,6 +366,8 @@
         </div>
     </div>
 
+    <!-- -------------------------------- -->
+
     <div class="leader-content">
         <div><img src="https://web-static.wrike.com/tp/storage/uploads/9cf1a7df-874a-4f00-a3ae-91479b89aff6/badge-small-business.svg" alt=""></div>
         <div><img src="https://web-static.wrike.com/tp/storage/uploads/99abd1b4-a2b1-40db-8079-030522096e0f/badge-mid-market.svg" alt=""></div>
@@ -365,6 +376,8 @@
         <div><img src="https://web-static.wrike.com/tp/storage/uploads/81c5217e-5888-4b40-89dd-b58c4711aca8/badge-leader-enterprise-g2-high-performer2022.svg" alt=""></div>
         <div><img src="https://web-static.wrike.com/tp/storage/uploads/81c5217e-5888-4b40-89dd-b58c4711aca8/badge-leader-enterprise-g2-high-performer2022.svg" alt=""></div>
     </div>
+
+    <!-- -------------------------------- -->
 
     <div class="faq-section">
         <h2>FAQ</h2>
