--- a/vishal/html/workspace-page-2.html
+++ b/vishal/html/workspace-page-2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workspace Page</title>
-    <link rel="stylesheet" href="/style/workspace.css">
+    <link rel="stylesheet" href="/vishal/style/workspace.css">
 </head>
 
 <body>
@@ -97,7 +97,7 @@
 
 </body>
 
-<script src="/script/workspace.js">
+<script src="/vishal/script/workspace.js">
 </script>
 
 </html>
