--- a/vishal/html/workspace-page-5.html
+++ b/vishal/html/workspace-page-5.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workspace Page</title>
     <!-- <link rel="stylesheet" href="/style/workspace.css"> -->
-    <link rel="stylesheet" href="/style/workspace-page-4.css">
+    <link rel="stylesheet" href="/vishal/style/workspace-page-4.css">
 </head>
 
 <body>
@@ -92,6 +92,6 @@
 
 </body>
 
-<script src="/script/workspace.js"></script>
+<script src="/vishal/script/workspace.js"></script>
 
 </html>
