--- a/vishal/html/dashboard.html
+++ b/vishal/html/dashboard.html
@@ -25,19 +25,19 @@
                     <i class="fa-solid fa-house-user"></i>
                 </div>
                 <div>
-                    <i class="fa-solid fa-greater-than" id="arrow1"></i>
+                    <i class="fas fa-angle-right dropdown" id="arrow1"></i>
                 </div>
                 <div>
                     <span>Box-Tech</span>
                 </div>
                 <div>
-                    <i class="fa-solid fa-greater-than" id="arrow2"></i>
+                    <i class="fas fa-angle-right dropdown" id="arrow2"></i>
                 </div>
                 <div>
                     <span>Box-Project</span>
                 </div>
                 <div>
-                    <i class="fa-solid fa-greater-than" id="arrow3"></i>
+                    <i class="fas fa-angle-right dropdown" id="arrow3"></i>
                 </div>
                 <div>
                     <span>week</span>
@@ -75,43 +75,174 @@
         </div>
 
     </header>
-
+    <!-- ==========================================creating side bar========================= -->
     <div class="side-bar">
         <div class="menu">
 
-            <div class="item" style="visibility: hidden; padding-top: 25px;"><a href="#"><i
-                        class="fas fa-desktop"></i>Dashboard</a></div>
+            <div class="item" style="visibility: hidden; padding-top: 25px;">
+
+                <a href="#"><i class="fas fa-desktop"></i>Dashboard
+
+                </a>
+            </div>
 
             <div class="item">
-                <a class="sub-btn"><i class="fas fa-angle-right dropdown"></i>Tools</a>
+
+                <a class="sub-btn"><i class="fas fa-angle-right dropdown"></i>Tools<i
+                        style="margin-left:130px; font-size: 15px; color: rgb(177, 177, 177);"
+                        class=" fa-regular fa-plus"></i>
+                </a>
+
                 <div class="sub-menu">
                     <a href="#" class="sub-item">No tools</a>
 
                 </div>
+
             </div>
 
             <div class="item">
-                <a class="sub-btn"><i class="fas fa-angle-right dropdown"></i>Settings</a>
+
+                <a class="sub-btn"><i class="fas fa-angle-right dropdown"></i>Project and folders<i
+                        class="fa-regular fa-plus"
+                        style="margin-left:43px; font-size: 15px; color: rgb(177, 177, 177);"></i>
+                </a>
+
                 <div class="sub-menu">
-                    <a class="sub-btn"><i class="fas fa-cogs"></i>Settings<i
-                            class="fas fa-angle-right dropdown"></i></a>
+
+                    <a class="sub-btn2"><i class="fas fa-angle-right dropdown"
+                            style="margin-right: 20px;"></i>Box-Project<i
+                            style="margin-left:70px; font-size: 15px; color: rgb(177, 177, 177);"
+                            class=" fa-regular fa-plus"></i>
+                    </a>
+
                     <div class="sub-menu">
-                        <a href="#" class="sub-item">Sub Item 01</a>
-                        <a href="#" class="sub-item">Sub Item 02</a>
+                        <a href="#" class="sub-item"><i class="fa-solid fa-folder" style="padding-left: 10px;"></i>
+                            Month</a>
+                        <a href="#" class="sub-item"><i class="fa-solid fa-folder" style="padding-left: 10px;"></i>
+                            week</a>
+                        <a href="#" class="sub-item"><i class="fa-solid fa-folder" style="padding-left: 10px;"></i>
+                            year</a>
                     </div>
                 </div>
+
             </div>
 
 
         </div>
 
     </div>
-    <div>
+    <!-- //====================================creating table==================================== -->
+    <div class="table_div">
+        <div>
+            <h3>Box-project
+            </h3>
+        </div>
+        <div>
+            <div>
+                <button><i style="margin-right: 5px" class="fa-solid fa-lock"></i>Share</button>
+            </div>
+            <div>
+                <i class="fa-regular fa-circle-question"></i>
+            </div>
+            <div><i class="fa-solid fa-ellipsis"></i></div>
+        </div>
+    </div>
+    <div class="table_div2">
+        <div>
+            <div>
+                <i class="fa-solid fa-list-check"></i>
+                <a href="#">List</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-chart-simple"></i>
+                <a href="#">Board</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-table"></i>
+                <a href="#">Table</a>
+                <i class="fa-solid fa-ellipsis"></i>
+            </div>
+            <div>
+                <i class="fa-solid fa-chart-bar"></i>
+                <a href="#">Gantt Chatt</a>
+            </div>
+            <div>
+                <i class="fa-solid fa-calendar-days"></i>
+                <a href="#">Calendar</a>
+                <i class="fa-solid fa-plus" style="margin-left: 40px;"></i>
+            </div>
+        </div>
 
     </div>
-</body>
-<script src="">
+    <hr>
+    <nav class="table_div3">
+        <ul>
+            <li>
 
-</script>
+                <a href="#"><i class="fa-solid fa-filter" style="padding-right: 7px;"></i>All tasks
+                    <i class="fas fa-angle-down dropdown" style="margin-left: 4px;"></i>
+                </a>
+                <ul>
+                    <li><a href="#"><input type="checkbox"> All tasks</a></li>
+                    <li><a href="#"><input type="checkbox">All active tasks</a></li>
+                    <li><a href="#"><input type="checkbox">My active tasks</a></li>
+                </ul>
+            </li>
+
+        </ul>
+
+        <ul>
+            <li>
+                <a href="#">By Priority
+                    <i class="fas fa-angle-down dropdown" style="margin-left: 4px;"></i>
+                </a>
+                <ul>
+                    <li><a href="#">Priority</a></li>
+                    <li><a href="#">Due Date</a></li>
+                    <li><a href="#">Status</a></li>
+                    <li><a href="#">Importance</a></li>
+                    <li><a href="#">Name</a></li>
+                </ul>
+            </li>
+
+        </ul>
+
+        <ul>
+            <li>
+                <a href="#">Expand/Collapse
+                    <i class="fas fa-angle-down dropdown" style="margin-left: 4px;"></i>
+                </a>
+                <ul>
+                    <li><a href="#"> Collapse all</a></li>
+                    <li><a href="#">Expand to show projects</a></li>
+                    <li><a href="#">Expand to show tasks</a></li>
+                    <li><a href="#">Expand all</a></li>
+                </ul>
+            </li>
+
+        </ul>
+        <div>|</div>
+        <i class="fa-solid fa-arrow-left" style="margin-left: 13px;"></i>
+        <i class="fa-solid fa-arrow-right" style="margin-left: 13px;"></i>
+    </nav>
+    <hr>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.2/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+
+            //jquery for toggle sub menus
+            $('.sub-btn').click(function () {
+                $(this).next('.sub-menu').slideToggle();
+                $(this).find('.dropdown').toggleClass('rotate');
+            });
+
+            $('.sub-btn2').click(function () {
+                $(this).next('.sub-menu').slideToggle();
+                $(this).find('.dropdown').toggleClass('rotate');
+            });
+
+        });
+    </script>
+</body>
 
 </html>
