--- a/faisal/description.html
+++ b/faisal/description.html
@@ -18,14 +18,15 @@
                 <h1>Maximize Your Marketing Impact in 2023</h1>
                 <h4>On-demand Webinar</h4>
                 <p>Join Wrike CMO Esther Flammer as she details the macro trends and 2023 marketing priorities to focus on for maximum results. She’ll also reveal the financial and human cost of the Dark Matter of Work and how to get ahead before it threatens your organization.</p>
+                <div id="butt1">
+                    <button>Register to watch</button>
+                </div>
             </div>
             <div id="cont2">
                 <img src="https://web-static.wrike.com/cdn-cgi/image/format=auto,quality=80,width=600,dpr=1/tp/storage/uploads/eaeca813-7006-4fd3-acf8-0589c640a2e3/rebrand-hero-marketing-600x425-2x.png" alt="">
             </div>
         </div>
-        <div id="butt1">
-            <button>Register to watch</button>
-        </div>
+        
     </div>
 
     <div id="mid">
@@ -86,3 +87,22 @@
    
 </body>
 </html>
+
+<script>
+
+let des1=document.querySelector("#butt2")
+des1.addEventListener("click",myfun4)
+function myfun4(){
+    window.location="video.html"
+}
+let des2=document.querySelector("#bot2>button")
+des2.addEventListener("click",myfun5)
+function myfun5(){
+    window.location="video.html"
+}
+let des3=document.querySelector("#butt1")
+des3.addEventListener("click",myfun6)
+function myfun6(){
+    window.location="video.html"
+}
+</script>
