--- a/faisal/webinar.html
+++ b/faisal/webinar.html
@@ -47,6 +47,11 @@
     <div id="more">
         <button>Load More</button>
     </div>
+
+
+    <!-- ****************************footer******************************* -->
+
+    
     
 </body>
 </html>
