--- a/faisal/description.html
+++ b/faisal/description.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Description</title>
     <link rel="stylesheet" href="description.css">
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
 </head>
 <body>
     <div id="main">
