--- a/sabdar/login.html
+++ b/sabdar/login.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="login.css">
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+
     <script src="https://kit.fontawesome.com/24c494a6b6.js"
     crossorigin="anonymous"></script>
 </head>
@@ -23,7 +25,7 @@
         </div>
         
         <p>By tapping Submit, you agree to our Privacy Policy and Terms & Conditions.</p>
-        <button id="login" class="button">Submit</button>
+        <button onclick="redirect_page()" id="login" class="button">Submit</button>
         <!-- <button id="tap" class="button"><a class="button" href="signup.html">Sign Up</a></button> -->
     </div>
     
