--- a/sabdar/navbar.html
+++ b/sabdar/navbar.html
@@ -321,7 +321,7 @@
             </div>
   
             <div>
-              <a href="#">Webinars</a>
+              <a href="/faisal/webinar.html">Webinars</a>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, est.</p>
             </div>
   
@@ -413,28 +413,25 @@
     </div> 
     
   
-    <a href="#news">Pricing</a>
+    <a href="/meenakshi/pricingPage.html">Pricing</a>
     
   <div class="navbar_right">
   
     <a href="#news">Contact Sales</a>
     <a href="./login.html">Login</a>
-    <button> start for free </button>
+    <button onclick="redirectbtn()"> start for free </button>
   
   </div>
   
   </div><hr>
 
 
-
-  
-
-
-
-
-
-
-
-
 </body>
 </html>
+
+<script>
+
+  function redirectbtn(){
+    window.location.href="/vishal/html/workspace-page-1.html"
+  }
+</script>
