--- a/vishal/html/workspace-page-3.html
+++ b/vishal/html/workspace-page-3.html
@@ -8,6 +8,8 @@
     <title>Workspace Page</title>
     <!-- <link rel="stylesheet" href="/style/workspace.css"> -->
     <link rel="stylesheet" href="/vishal/style/workspace-css-page-3.css">
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
             <div class="left_logo_container">
 
                 <div class="img_logo">
-                    <img src="/images/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt="Box_Tech">
+                    <img src="/vishal/images/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt="Box_Tech">
                 </div>
 
                 <div>
