--- a/vishal/html/dashboard.html
+++ b/vishal/html/dashboard.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/vishal/style/dashboard.css">
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
