--- a/vishal/html/workspace-page-2.html
+++ b/vishal/html/workspace-page-2.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workspace Page</title>
     <link rel="stylesheet" href="/vishal/style/workspace.css">
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
             <div class="left_logo_container">
 
                 <div class="img_logo">
-                    <img src="/images/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt="Box_Tech">
+                    <img src="/vishal/images/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt="Box_Tech">
                 </div>
 
                 <div>
