--- a/faisal/description.html
+++ b/faisal/description.html
@@ -79,7 +79,7 @@
             <img src="https://web-static.wrike.com/cdn-cgi/image/format=auto,quality=80,width=488,dpr=1/tp/static/assets/img/raster/white/7.png?v2" alt="">
         </div>
   </div>
-  <div id="sk_polocy">
+  <div id="bottom">
     <p>Copyright © 2006—2022 Wrike, Inc.​ 9171 Towne Center Drive, Suite 200, San Diego, CA 92122</p>
     <p>All rights reserved. Read our Privacy Policy and Terms of Service. CA Notice at Collection.​ Cookie Preferences.</p>
     <p>All Registered Trade Marks, company names, brand names and logos used on this Website are the property of their respective owners.</p>
