--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
       </div>
     <!-----------homepage start ----------------------------------------------------------------------------------------------->
     <div class="sh_text_image">
-         <div>
+         <div style="margin-top:10%">
             <h1>Remove barriers,</h1>
             <h1>find clarity,</h1>
             <h1>exceed goals</h1>
