--- a/vishal/html/workspace-page-3.html
+++ b/vishal/html/workspace-page-3.html
@@ -8,7 +8,7 @@
     <title>Workspace Page</title>
     <!-- <link rel="stylesheet" href="/style/workspace.css"> -->
     <link rel="stylesheet" href="/vishal/style/workspace-css-page-3.css">
-    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon">
 
 </head>
 
@@ -36,7 +36,7 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/space-image.png" alt=""></div>
+                <div><img src="/vishal/images/space-image.png" alt=""></div>
 
 
 
