--- a/vishal/html/workspace-page-4.html
+++ b/vishal/html/workspace-page-4.html
@@ -8,7 +8,7 @@
     <title>Workspace Page</title>
     <!-- <link rel="stylesheet" href="/style/workspace.css"> -->
     <link rel="stylesheet" href="/vishal/style/workspace-page-4.css">
-    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon" >
+    <link rel="shortcut icon" href="/meenakshi/pricingImages/BoxTech logo.png" type="image/x-icon">
 
 </head>
 
@@ -34,7 +34,7 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/first-space-img.png" alt=""></div>
+                <div><img src="/vishal/images/first-space-img.png" alt=""></div>
 
 
 
