--- a/sabdar/navbar.html
+++ b/sabdar/navbar.html
@@ -16,7 +16,7 @@
   
   
     <div id="nav_img">
-      <img src="/Hexagon_T.png" alt="" srcset="">
+      <img src="/vishal/images/Hexagon_Tech_Logo_Design_Stock___2_-removebg-preview.png" alt="" srcset="">
     </div>
     
     
