--- a/vishal/html/workspace-page-1.html
+++ b/vishal/html/workspace-page-1.html
@@ -43,7 +43,7 @@
                         </div>
 
                         <div>
-                            <input type="text" name="" id="Password" placeholder="Create Password">
+                            <input type="password" name="" id="Password" placeholder="Create Password">
                         </div>
 
                         <div id="number_div">
