--- a/vishal/html/workspace-page-3.html
+++ b/vishal/html/workspace-page-3.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/space-image.png" alt=""></div>
+                <div><img src="/vishal/images/space-image.png" alt=""></div>
 
 
 
