--- a/vishal/html/workspace-page-4.html
+++ b/vishal/html/workspace-page-4.html
@@ -34,7 +34,7 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/first-space-img.png" alt=""></div>
+                <div><img src="/vishal/images/first-space-img.png" alt=""></div>
 
 
 
