--- a/vishal/html/workspace-page-5.html
+++ b/vishal/html/workspace-page-5.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="right_logo_container">
-                <div><img src="/images/task-img.png" alt=""></div>
+                <div><img src="/vishal/images/task-img.png" alt=""></div>
 
 
 
